@@ -1,3 +1,6 @@
+20080412
+	* Added fullscreen capability
+
 20080411
 	* Packaged mo files
 
